# topic-vector-search

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  sample_posts.json  topic_vector_search_demo.ipynb  topic_vector_search_demo_sample.ipynb
output/: doc_index.json  probabilities.json  topic_assignments.csv  topics.json
output/bertopic_model/: ctfidf_config.json  topics.json
src/: generate_posts.py  index.py  models.py  search.py  source.py  topic_model.py
